--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,14 @@
 {
-  "presets": ["@babel/env", "@babel/react"],
+  "presets": ["@babel/preset-env", "@babel/react"],
     "env": {
       "test": {
-        "presets": ["@babel/env", "@babel/react"]
+        "presets": ["@babel/preset-env", "@babel/react"]
       }
     },
     "plugins": [
       "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-object-rest-spread"
+      "@babel/plugin-proposal-object-rest-spread",
+      ["@babel/plugin-proposal-decorators", { "legacy": true }]
     ]
   }
 
