--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "enzyme-to-json": "^3.6.1",
     "live-server": "^1.2.1",
     "moment": "^2.29.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "raf": "^3.4.1",
     "react": "^17.0.2",
@@ -27,22 +27,28 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.2",
+    "redux": "^4.0.5",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.13",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.12.13",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^5.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^26.6.3",
     "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
-    "webpack": "^5.28.0",
+    "webpack": "^5.31.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
@@ -51,7 +57,8 @@
   },
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack --progress --env production",
     "dev": "webpack serve --mode development --env development",
     "test": "jest --config=jest.config.json"
   },
