--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "babel-plugin-react-transform": "^3.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.1",
+    "enzyme-to-json": "^3.6.2",
     "live-server": "^1.2.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
+    "react-datepicker": "^3.7.0",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.12.1",
@@ -41,24 +42,27 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^5.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "css-loader": "^5.2.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.4.1",
     "sass": "^1.32.8",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
-    "webpack": "^5.31.0",
+    "typescript-react-loadable-plugin": "^1.0.3",
+    "webpack": "^5.31.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-shell-plugin-next": "^2.2.2"
   },
   "transform": {
     "\\.js$": "<rootDir>/node_modules/babel-jest"
   },
   "scripts": {
     "serve": "live-server public/",
-    "build:dev": "webpack",
-    "build:prod": "webpack --progress --env production",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --progress --env production --mode production",
     "dev": "webpack serve --mode development --env development",
     "test": "jest --config=jest.config.json"
   },
