--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "express": "^4.17.1",
     "live-server": "^1.2.1",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
@@ -64,7 +65,9 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --progress --env production --mode production",
     "dev": "webpack serve --mode development --env development",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod" 
   },
   "description": ""
 }
