--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "@babel/runtime": "^7.13.10",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-transform": "^3.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "express": "^4.17.1",
-    "live-server": "^1.2.1",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
@@ -28,7 +24,6 @@
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^17.0.2",
     "redux": "^4.0.5",
     "uuid": "^8.3.2",
     "validator": "^13.5.2"
@@ -41,6 +36,9 @@
     "@babel/preset-react": "^7.12.13",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
+    "live-server": "^1.2.1",
+    "chalk": "^4.1.0",
+    "react-test-renderer": "^17.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^5.2.1",
@@ -55,6 +53,9 @@
     "webpack": "^5.31.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "webpack-shell-plugin-next": "^2.2.2"
   },
   "transform": {
@@ -67,7 +68,7 @@
     "dev": "webpack serve --mode development --env development",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build:prod" 
+    "heroku-postbuild": "npm run build:prod"
   },
   "description": ""
 }
