--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
@@ -66,7 +67,7 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --progress --env production --mode production",
     "dev": "webpack serve --mode development --env development",
-    "test": "jest --config=jest.config.json",
+    "test": "jest --config test/config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
