--- a/.babelrc
+++ b/.babelrc
@@ -7,9 +7,8 @@
     },
     "plugins": [
       "@babel/plugin-proposal-class-properties",
+      "transform-es2015-modules-commonjs",
       "@babel/plugin-proposal-object-rest-spread",
       ["@babel/plugin-proposal-decorators", { "legacy": true }]
     ]
   }
-
-  
