--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "dependencies": {
     "@babel/cli": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.13.10",
+    "babel-jest": "^26.6.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "express": "^4.17.1",
+    "jest-enzyme": "^7.1.2",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
@@ -22,6 +26,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.12.1",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -34,18 +39,21 @@
     "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-react": "^7.13.13",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
-    "live-server": "^1.2.1",
-    "chalk": "^4.1.0",
-    "react-test-renderer": "^17.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "chalk": "^4.1.0",
     "css-loader": "^5.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^25.0.0",
+    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.4.1",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -54,20 +62,16 @@
     "webpack": "^5.31.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "webpack-shell-plugin-next": "^2.2.2"
   },
   "transform": {
     "\\.js$": "<rootDir>/node_modules/babel-jest"
   },
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --progress --env production --mode production",
     "dev": "webpack serve --mode development --env development",
-    "test": "jest --config test/config.json",
+    "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
