--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^8.4.1",
+    "firebase-admin": "9.6.0",
+    "firebase-functions": "^3.13.2",
     "jest-enzyme": "^7.1.2",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
     "raf": "^3.4.1",
+    "raf-polyfill": "^1.0.0",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
     "react-datepicker": "^3.7.0",
@@ -31,6 +36,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
@@ -45,6 +52,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "chalk": "^4.1.0",
+    "cross-env": "^5.0.5",
     "css-loader": "^5.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -71,7 +79,7 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --progress --env production --mode production",
     "dev": "webpack serve --mode development --env development",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
