--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-datepicker": "^3.7.0",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
+    "react-loadable": "^5.5.0",
     "react-modal": "^3.12.1",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^7.2.3",
@@ -61,7 +62,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^25.0.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.4.1",
