--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase-server": "^1.1.0",
     "jest": "^25.0.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.4.1",
