--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^8.4.1",
     "firebase-admin": "9.6.0",
     "firebase-functions": "^3.13.2",
+    "history": "^4.10.1",
     "jest-enzyme": "^7.1.2",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
